relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-25.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@imei|356938035643809": {
    "type": "string",
    "value": "[imei]"
  },
  "_meta": {
    "@imei|356938035643809": {
      "value": {
        "": {
          "rem": [
            [
              "@imei",
              "s",
              0,
              6
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
