relay-server/src/processing/spans/snapshots/relay_server__processing__spans__process__tests__scrub_span_pii_string_rules-27.snap
---
source: relay-server/src/processing/spans/process.rs
expression: SerializableAnnotated(&data.value().unwrap().attributes)
---
{
  "@imei:remove|356938035643809": {
    "type": "string",
    "value": ""
  },
  "_meta": {
    "@imei:remove|356938035643809": {
      "value": {
        "": {
          "rem": [
            [
              "@imei:remove",
              "x",
              0,
              0
            ]
          ],
          "len": 15
        }
      }
    }
  }
}
